translation-tool/inputs/source_meta/objects/Questionnaire_for_Offers__c.object
<CustomObject>
    <fields>
        <fullName>Abandon_Reason__c</fullName>
        <label>Abandon Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition - cable or dsl</fullName>
                </value>
                <value>
                    <fullName>Fair Access Policy</fullName>
                </value>
                <value>
                    <fullName>Monthly service is too expensive</fullName>
                </value>
                <value>
                    <fullName>Equipment is too expensive</fullName>
                </value>
                <value>
                    <fullName>Service does not meet needs</fullName>
                </value>
                <value>
                    <fullName>Why should I switch from Dialup?</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clear_Southern_Sky__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you have a clear view of the southern sky?</description>
        <label>Clear Southern Sky</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>How_Heard__c</fullName>
        <description>How did you hear about us?</description>
        <label>How Heard</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mailer</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Word of mouth</fullName>
                </value>
                <value>
                    <fullName>TV</fullName>
                </value>
                <value>
                    <fullName>Walk-in</fullName>
                </value>
                <value>
                    <fullName>Newspaper Ad</fullName>
                </value>
                <value>
                    <fullName>Radio</fullName>
                </value>
                <value>
                    <fullName>Yard Sign</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Heard_in_case_Other__c</fullName>
        <description>Applicable in case How Heard = Other</description>
        <label>How Heard in case Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Questionnaire for Offers</relationshipLabel>
        <relationshipName>Questionnaire_for_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Offer</label>
        <referenceTo>Order_Offer__c</referenceTo>
        <relationshipLabel>Questionnaire for Offers</relationshipLabel>
        <relationshipName>Questionnaire_for_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Permission_to_Install__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you own the building OR do you rent and have permission to install a dish?</description>
        <label>Permission to Install</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Play_Online_Games__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does anyone in your household play online games using systems like Xbox Live, PlayStation Network, or online PC games that require a rapid-response like World of WarCraft or Call of Duty with people outside of the home?</description>
        <label>Play Online Games</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualified_Offers__c</fullName>
        <description>Comma separated list of offer names the user was qualified for</description>
        <label>Qualified Offers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Use_Computer_for__c</fullName>
        <description>Do you use your computer for any of the following?</description>
        <label>Use Computer for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Streaming Video</fullName>
                </value>
                <value>
                    <fullName>VoIP</fullName>
                </value>
                <value>
                    <fullName>Videoconferencing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_Internet_for__c</fullName>
        <description>How do you plan to use the Internet?</description>
        <label>Use Internet for</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Basic browsing, photo sharing and social networking</fullName>
                </value>
                <value>
                    <fullName>Moderate uploads/downloads (good for multi-PC household)</fullName>
                </value>
                <value>
                    <fullName>Heavy uploads/downloads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_from_Home__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Do you work from home?</description>
        <label>Work from Home</label>
        <type>Checkbox</type>
    </fields>
    <label>Questionnaire for Offer</label>
    <nameField>
        <displayFormat>QSTN - {0000000000}</displayFormat>
        <label>Questionnaire for Offer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire for Offers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>